# HostCat

./: Cargo.toml  README.md  build  build.rs  config  hostcat  hostcat.yml  hosts  run.sh
src/: args_mapper.rs  config_mapper.rs  main.rs  mod.rs  my_fs.rs  parser.rs  privileges.rs
