[package]
name = "hostcat"
edition = "2018"
version = "0.3.0"
authors = ["Aniket Prajapati <prajapati.ani306@gmail.com>"]
license = "GPL-3.0-or-later"
description = "UNIX Command Line tool to switch between Local Dns profiles"
readme = "README.md"
homepage = "https://github.com/aniketfuryrocks/HostCat"
repository = "https://github.com/aniketfuryrocks/HostCat"
keywords = ["hosts", "dns", "local_dns", "dns", "localhost"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
users = "0.10.0"
clap = "3.0.0-beta.1"
better-panic = "0.2.0"

[profile.release]
opt-level = "s"
panic = "abort"